--- a/simple-cell-types.cabal
+++ b/simple-cell-types.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                simple-cell-types
-version:             0.10.0
+version:             0.10.1
 synopsis:            Types for the simple-cell library
 -- description:         
 license:             MIT
@@ -18,16 +18,16 @@ cabal-version:       >=1.10
 library
   exposed-modules:     SimpleStore.Cell.Types
   -- other-modules:       
-  build-depends:       base >=4.7 && <4.8, 
-                       system-filepath >=0.4 && <0.5,
-                       basic-prelude >=0.3 && <0.4, 
-                       stm >=2.4 && <2.5, 
-                       directed-keys >=0.3 && <0.4, 
-                       stm-containers >=0.2 && <0.3, 
-                       containers >=0.5 && <0.6, 
-                       simple-store >=0.2 && <0.3, 
-                       aeson >=0.8 && <0.9, 
-                       aeson-serialize >=0.0 && <0.1, 
-                       cereal >=0.4 && <0.5
+  build-depends:        base 
+                      , system-filepath 
+                      , basic-prelude 
+                      , stm 
+                      , directed-keys
+                      , stm-containers 
+                      , containers 
+                      , simple-store 
+                      , aeson 
+                      , aeson-serialize 
+                      , cereal
   hs-source-dirs:      src
   default-language:    Haskell2010
