--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - git clone git@github.com:plow-technologies/plow-scripts.git
-    - cp plow-scripts/config $HOME/.cabal/config
+    - cp plow-scripts/configstack $HOME/.cabal/config
     - cabal update
     - cabal sandbox init
     - cabal install   --only-dependencies -j2
