--- a/simple-cell-types.cabal
+++ b/simple-cell-types.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-libraryc
+library
   exposed-modules:     SimpleStore.Cell.Types
   -- other-modules:       
   build-depends:        base >= 4 && < 5
